...
    // MARK: - Views
    
    private let scrollView = UIScrollView()
    
    private let imageView: UIImageView = {
        let imageView = UIImageView()
        imageView.accessibilityIdentifier = "SingleImage"
        return imageView
    }()
    
    private let backwardButton: UIButton = {
        let button = UIButton()
        let image = UIImage(resource: .navBackButton)
        button.setImage(image, for: .normal)
        button.tintColor = .ypWhite
        button.accessibilityIdentifier = "BackwardButton"
        return button
    }()
    
    private let shareButton: UIButton = {
        let button = UIButton()
        let image = UIImage(resource: .shareButton)
...
