...
    weak var delegate: WebViewViewControllerDelegate?
    
    // MARK: - Views
    
    private let webView: WKWebView = {
        let webView = WKWebView()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.backgroundColor = .ypWhite
        return webView
    }()
    
    private let progressView: UIProgressView = {
        let progressView = UIProgressView()
...
